--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,4 +13,11 @@ variables:
   imageName: 'shashankbarsin/bootcamp-demo:$(build.buildId)'
 
 steps:
-- script: docker build -t developer-camp:dev ./app
+- task: Docker@1
+  displayName: Container registry login
+  inputs:
+    command: login
+    azureSubscriptionEndpoint: demo123
+    azureContainerRegistry: vivek311.azurecr.io
+- script: docker build -t vivek311.azurecr.io/$(imageName) ./app
+- script: docker push vivek311.azurecr.io/$(imageName)
